--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </div>
     <div class="centered-main-page-element">
       <p id="top-section-for-adding-element-to-list">
-        <label for="new-task">Add Item</label>
+        <label class="add-item-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text">
           <button>Add</button>
