--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p id="top-section-for-adding-element-to-list">
         <label class="add-item-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task"class="input-task" type="text">
           <button>Add</button>
         </div>
       </p>
@@ -22,14 +22,14 @@
         <li>
           <input type="checkbox">
             <label class="task">Pay Bills</label>
-          <input type="text" class="task">
+          <input type="text" class="input-task">
           <button class="edit">Edit</button>
           <button class="delete"><img class="remove" src="./remove.svg"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
             <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
+          <input type="text" value="Go Shopping" class="input-task">
           <button class="edit">Save</button>
           <button class="delete"><img class="remove" src="./remove.svg"></button>
         </li>
@@ -39,7 +39,7 @@
         <li>
           <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
-          <input type="text" class="task">
+          <input type="text" class="input-task">
           <button class="edit">Edit</button>
           <button class="delete"><img class="remove" src="./remove.svg"></button>
         </li>
