--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="body">
     <div class="main-picture">
-      <img class="picture" src="./eisenhower-matrix.jpg">
+      <img class="picture" src="./eisenhower-matrix.jpg" alt="The Eisenhower Matrix">
       <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="centered-main-page-element">
@@ -24,14 +24,14 @@
             <label class="task">Pay Bills</label>
           <input type="text" class="input-task">
           <button class="edit">Edit</button>
-          <button class="delete"><img class="remove" src="./remove.svg"></button>
+          <button class="delete"><img class="remove" src="./remove.svg" alt="remove button"></button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
             <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="input-task">
           <button class="edit">Save</button>
-          <button class="delete"><img class="remove" src="./remove.svg"></button>
+          <button class="delete"><img class="remove" src="./remove.svg" alt="remove button"></button>
         </li>
       </ul>
       <h3>Completed</h3>
