--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label class="add-item-label" for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="input-task" type="text">
-          <button>Add</button>
+          <button class="add">Add</button>
         </div>
       </p>
       <h3>Todo</h3>
