--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
           <button class="add">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
+      <h3 class="title">Todo</h3>
       <ul id="incomplete-tasks">
-        <li>
+        <li class="edited-task">
           <input type="checkbox">
             <label class="task">Pay Bills</label>
           <input type="text" class="input-task">
@@ -34,9 +34,9 @@
           <button class="delete"><img class="remove" src="./remove.svg" alt="remove button"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
+      <h3 class="title">Completed</h3>
       <ul id="completed-tasks">
-        <li>
+        <li class="edited-task">
           <input type="checkbox" checked>
             <label class="task">See the Doctor</label>
           <input type="text" class="input-task">
