--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <h3 class="title">Todo</h3>
       <ul id="incomplete-tasks">
         <li class="edited-task">
-          <input type="checkbox">
+          <input type="checkbox" class="input-checkbox">
             <label class="task">Pay Bills</label>
           <input type="text" class="input-task">
           <button class="edit">Edit</button>
           <button class="delete"><img class="remove" src="./remove.svg" alt="remove button"></button>
         </li>
         <li class="edit-mode">
-          <input type="checkbox">
+          <input type="checkbox" class="input-checkbox">
             <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="input-task">
           <button class="edit">Save</button>
@@ -37,7 +37,7 @@
       <h3 class="title">Completed</h3>
       <ul id="completed-tasks">
         <li class="edited-task">
-          <input type="checkbox" checked>
+          <input type="checkbox" class="input-checkbox" checked>
             <label class="task">See the Doctor</label>
           <input type="text" class="input-task">
           <button class="edit">Edit</button>
